<resources>
    <string name="app_name">Salary Calculator</string>
    <string name="monthly_salary">Monthly Salary</string>
    <string name="helper_text_numbers">numbers only.</string>
    <string name="deduction">How many days have been deducted ?</string>
    <string name="doubles">How many double pay days ?</string>
    <string name="salary">Your Salary is:</string>
    <string name="calculate">Calculate</string>
    <string name="egp">" EGP"</string>
    <string name="back">back</string>
    <string name="allowances">Total allowances amount</string>
    <string name="application_logo">Application logo</string>
    <string name="spiral">spiral</string>
</resources>