<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="12dp"
    android:background="@color/ivory">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        style="?attr/materialCardViewElevatedStyle"
        app:cardBackgroundColor="@color/ivory"

        app:cardElevation="@dimen/cardview_default_elevation"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/monthlySalary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/money_24"
                app:startIconMinSize="48dp"
                app:startIconTint="@color/green"
                app:boxStrokeColor="@color/royal_blue"
                app:hintTextColor="@color/royal_blue"
                android:hint="@string/monthly_salary"
                app:helperTextEnabled="false"
                android:layout_marginBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_primary"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/deduction"
                android:layout_below="@id/monthlySalary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/deduction"
                app:startIconMinSize="48dp"
                app:startIconTint="@color/red"
                app:hintAnimationEnabled="true"
                app:boxStrokeColor="@color/royal_blue"
                app:hintTextColor="@color/royal_blue"
                android:hint="@string/deduction"
                app:helperTextTextColor="@color/red"
                app:helperTextEnabled="false"
                android:layout_marginBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_primary"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/doubles"
                android:layout_below="@id/deduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/doubles"
                app:startIconDrawable="@drawable/doubles"
                app:startIconMinSize="48dp"
                app:startIconTint="#254391"
                app:boxStrokeColor="@color/royal_blue"
                app:hintTextColor="@color/royal_blue"
                app:hintAnimationEnabled="true"
                app:helperTextTextColor="@color/red"
                app:helperTextEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_primary"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>


    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/calculate"
        android:layout_below="@id/card1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:backgroundTint="@color/royal_blue"
        android:textColor="@color/ivory"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        style="?attr/materialCardViewElevatedStyle"
        app:cardBackgroundColor="@color/ivory"
        app:cardElevation="@dimen/cardview_default_elevation"
        android:visibility="gone"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/text_primary"
                    android:text="@string/salary"
                    android:textAppearance="?attr/textAppearanceBodyLarge"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center"
                    android:textAppearance="?attr/textAppearanceTitleLarge"
                    android:textColor="@color/text_primary"
                    />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>